--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,3 +1,11 @@
+.dynamic-padding {
+  padding: 1.5rem 3rem;
+}
+
+.signup-block {
+  gap: 3rem;
+}
+
 .logout {
   display: flex;
   align-items: center;
