--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,6 @@
-<header class="d-flex justify-content-between align-items-center px-5 py-4">
+<header class="d-flex justify-content-between align-items-center dynamic-padding">
   <p class="logo">Vidlik</p>
-  <div class="d-flex gap-5 align-items-center">
-
+  <div class="d-flex signup-block align-items-center">
     <ng-container *ngIf="!currentUser">
       <button class="signup" (click)="openModal()">
         <p>Sign Up</p>
