--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,18 +1,11 @@
 <div style="min-height: calc(100vh - 56px); width: 100vw">
   <app-header [currentUser]="currentUser" (openModel)="openModal(signupModal)"></app-header>
-  <div class="m-5 position-relative">
-    <div
-      style="
-        width: 180px;
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-      "
-    >
+  <div class="dynamic-padding position-relative pt-5 pb-5">
+    <div class="timer-block">
       <app-timer [workMin]="25" [shortBreakMin]="5" [longBreakMin]="20" [rounds]="4">
       </app-timer>
     </div>
-    <div style="width: 370px; margin-right: 0; margin-left: auto">
+    <div class="task-block">
       <div class="task d-flex justify-content-between align-items-center p-3">
         <div
           class="checkbox"
@@ -28,7 +21,6 @@
           </p>
           <p class="task-undertext">4 rounds &nbsp;&nbsp; 5/1/10 min</p>
         </div>
-        <p class="task-undertext" style="color: transparent">Edit</p>
       </div>
     </div>
   </div>
