--- a/src/styles.scss
+++ b/src/styles.scss
@@ -147,3 +147,83 @@ input:checked + .slider:before {
   transform: translateX(100%);
   box-shadow: inset 15px -4px 0px 15px #ffd800;
 }
+
+
+@media (max-width: 480px) {
+  .dynamic-padding {
+    padding: 1.5rem !important;
+  }
+  .signup-block {
+    gap: 1rem !important;
+  }
+  //.task {
+  //  width: 310px !important;
+  //}
+  .timer-block {
+    position: unset !important;
+    left: 0 !important;
+    transform: none !important;
+    margin: 0 auto !important;
+  }
+  .task-block {
+    margin: 3rem auto !important;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 768px) {
+  .dynamic-padding {
+    padding: 1.5rem !important;
+  }
+  .signup-block {
+    gap: 1rem !important;
+  }
+  //.task {
+  //  width: 310px !important;
+  //}
+  .timer-block {
+    position: unset !important;
+    left: 0 !important;
+    transform: none !important;
+    margin: 0 auto !important;
+  }
+  .task-block {
+    margin: 3rem auto !important;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 863px) {
+  .dynamic-padding {
+    padding: 1.5rem !important;
+  }
+  .signup-block {
+    gap: 1rem !important;
+  }
+  //.task {
+  //  width: 310px !important;
+  //}
+  .timer-block {
+    position: unset !important;
+    left: 0 !important;
+    transform: none !important;
+    margin: 0 auto !important;
+  }
+  .task-block {
+    margin: 3rem auto !important;
+  }
+}
+
+@media (min-width: 864px) and (max-width: 1023px) {
+  .timer-block {
+    position: unset !important;
+    left: 0 !important;
+    transform: none !important;
+    margin: 0 auto !important;
+  }
+  .task-block {
+    margin: 3rem auto !important;
+  }
+}
+
+@media (min-width: 1440px) {
+
+}
