added media query to header and main for all devices

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -10,7 +10,7 @@
   display: flex;
   align-items: center;
   gap: 5px;
-  padding: 5px 15px;
+  //padding: 5px 15px;
   border: none;
   background: transparent;
   font-size: 15px;
