--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -51,7 +51,7 @@
 
 .login-modal {
   font-family: 'JetBrains Mono', monospace;
-  min-width: 498px;
+  //min-width: 498px;
   min-height: 503px;
 
   .card-heading {
